<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">foodme</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="splashMessage">Touch Anywhere to Continue</string>
    <string name="entree_button">Entree</string>
    <string name="drink_button">Drink</string>
    <string name="appetizer_button">Appetizer</string>
    <string name="home_button">Home</string>
    <string name="my_order_button">My Order</string>
    <string name="call_waiter_button">Call Waiter</string>
    <string name="dessert_button">Dessert</string>
    <string name="call_waiter">Call waiter hopefully</string>
    <string name="appetizer_activity">appetizer</string>
    <string name="dessert_activity">dessert</string>
    <string name="drink_activity">drink</string>
    <string name="entree_activity">entree</string>
    <string name="leave_rating">\nPlease rate this item!</string>
    <string name="submit_rating">Submit Rating</string>
    <string name="add">Add to Order</string>
    <string name="dummy1">dummy1</string>
   	<string name="dummy2">dummy2</string>
 	<string name="dummy3">dummy3</string>
 	<string name="note">Add a note for this item</string>
 	<string name="some_description">adasdjasdj;adjl;jasd;ja;sd;ka`snd;kasdjkajdlj`jsknksdaufhowe`nflkcnlvwweofqweflskndvlsndfs
 	    `fnsdf
 	    sodjflsadjfasdfasdfj
 	    wpfp</string>
   	<string-array
        name="test_names">
        <item>test1</item>
        <item>test2</item>
        <item>test3</item>
        <item>TESTFOUR</item>
   	</string-array>
   	<string-array
   	    name="quantity_number">
   	    <item>Select Quantity</item>
   	    <item>1</item>
   	    <item>2</item>
   	    <item>3</item>
   	    <item>4</item>
   	    <item>5</item>
   	</string-array>
   	<string-array
   	    name ="test_fragments">
   	    <item>fooditem1</item>
   	    <item>fooditem2</item>
   	    <item>fooditem3</item>
   	    <item>fooditem1</item>
   	    <item>fooditem2</item>
   	    <item>fooditem3</item>
   	    <item>fooditem1</item>
   	    <item>fooditem2</item>
   	    <item>fooditem3</item>
   	    <item>fooditem1</item>
   	    <item>fooditem2</item>
   	    <item>fooditem3</item>
   	    <item>fooditem1</item>
   	    <item>fooditem2</item>
   	    <item>fooditem3</item>
   	</string-array>
</resources>
